assets/css/main.css
/* ... */
#single_post .review_d span {
    font-size: 14px;
    color: rgba(0, 0, 0, 0.7);
}

#single_post .review_d p {
    padding-top: 20px;
    max-width: 700px;
}

#single_post .commentar {
    display: -webkit-box;
    display: flex;
    -webkit-box-align: start;
    align-items: flex-start;
    -webkit-box-pack: justify;
    justify-content: space-between;
}

#single_post .commentar img {
    border-radius: 50%;
    width: 90px;
}

#single_post .commentar textarea {
    border: 1px solid rgba(0, 0, 0, 0.2);
    width: 100%;
    display: block;
    padding: 20px;
    height: 80px;
    border-radius: 8px;
    outline: none;
    -webkit-transition: 0.3s;
    transition: 0.3s;
    margin-bottom: 20px;
    font-size: 15px;
}

#single_post .commentar textarea:focus {
    border: 1px solid #eb9412;
}

#single_post .commentar .mess {
    display: block;
    width: 100%;
    margin-left: 35px;
}

#shop header {
    background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.5)), to(rgba(0, 0, 0, 0.5))), url("../img/shop_fon_l.png") no-repeat center top/cover;
    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../img/shop_fon_l.png") no-repeat center top/cover;
    background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.5)), to(rgba(0, 0, 0, 0.5))), url("../img/menuBackgroundImage.jpg") no-repeat center/cover;
    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../img/menuBackgroundImage.jpg") no-repeat center/cover;
}

.menu_items {
    padding-top: 80px;
}

.related_products .products_sh {
    margin-bottom: 0px;
}

.products_sh {
    padding-bottom: 25px;
    margin-bottom: 35px;
    border-radius: 8px;
    overflow: hidden;
    -webkit-transition: 0.3s;
    transition: 0.3s;
}

.products_sh:hover {
    box-shadow: 0 0 30px rgba(0, 0, 0, 0.1);
    color: #eb9412;
}

.products_sh:hover .cont_product {
    padding: 0px 25px;
}

.products_sh:hover .cont_product h3 {
    color: #eb9412;
}

.products_sh img, .products_sh p {
    width: 100%;
    -webkit-transition: 0.3s;
    transition: 0.3s;
    z-index: -1;
}

.products_sh:hover a {
    opacity: 1;
    -webkit-transform: translate(0, 0px);
    transform: translate(0, 0px);
}

.products_sh:hover img {
    -webkit-transform: scale(1.2);
    transform: scale(1.2);
}

.products_sh .row {
    padding-top: 15px;
    padding-left: 15px;
    padding-right: 15px;
}

.products_sh .cont_product {
    display: block;
    -webkit-transition: 0.3s;
    transition: 0.3s;
    cursor: pointer;
    padding: 0px 15px;
    text-decoration: none;
}

.products_sh .cont_product h3 {
    padding-top: 10px;
    padding-bottom: 15px;
    -webkit-transition: 0.3s;
    transition: 0.3s;
    border-top: 1px solid #d9d9d9;
}

.products_sh .cont_product p {
    height: 55px;
    overflow: hidden;
    max-width: 300px;
}

.products_sh .cont_product span {
    font-family: 'Unna';
    font-size: 24px;
    color: #eb9412;
    font-weight: bold;
}

.products_sh .cont_product *:nth-child(1) {
    padding-bottom: 5px;
}

#shop_t .products_sh {
    -webkit-box-flex: 1;
    flex-grow: 1;
}

#shop_t .shop_block {
    flex-wrap: nowrap;
}

.image_product_add_to_cart {
    position: relative;
    display: -webkit-box;
    display: flex;
    -webkit-box-align: center;
    align-items: center;
    -webkit-box-pack: center;
    justify-content: center;
    overflow: hidden;
}

.image_product_add_to_cart a {
    position: absolute;
    color: #fff;
    left: 0;
    right: 0;
    margin-left: auto;
    margin-right: auto;
    background: #eb9412;
    width: 180px;
    padding: 15px 0px;
    text-align: center;
    display: -webkit-box;
    display: flex;
    -webkit-box-align: center;
    align-items: center;
    -webkit-box-pack: center;
    justify-content: center;
    opacity: 0;
    -webkit-transition: 0.3s;
    transition: 0.3s;
    -webkit-transform: translate(0, 50px);
    transform: translate(0, 50px);
}

.image_product_add_to_cart a i {
    padding-right: 10px;
    margin-bottom: 2px;
}

.image_product_add_to_cart:before {
    content: '';
    display: block;
    position: absolute;
    background: rgba(0, 0, 0, 0.5);
    width: 100%;
    height: 100%;
    opacity: 0;
    -webkit-transition: 0.3s;
    transition: 0.3s;
}

.products_sh:hover .image_product_add_to_cart:before {
    opacity: 1;
}

.star i {
    font-size: 14px;
    color: #eb9412;
}

.container .slider_namber p {
    color: rgba(0, 0, 0, 0.7);
}

.categories_s h3 {
    text-transform: uppercase;
    padding-bottom: 25px;
}

.categories_s a {
    text-decoration: none;
    color: #000;
    font-size: 16px;
    display: block;
    padding-bottom: 15px;
}

.products_post h3 {
    padding-bottom: 35px;
    text-transform: uppercase;
}

.products_post a {
    text-decoration: none;
    color: #000;
}

.products_post a .img_p,
.latest_post a .img_p {
    width: 70px;
    height: 70px;
    overflow: hidden;
    border-radius: 8px;
    -webkit-box-flex: 0;
    flex: none;
}

.products_post a img,
.latest_post a img {
    -webkit-transition: 0.3s;
    transition: 0.3s;
}

.products_post a:hover img,
.latest_post a:hover img {
    -webkit-transform: scale(1.2);
    transform: scale(1.2);
}

form {
    margin-top: 40px;
}

.rangeslider h3 {
    text-transform: uppercase;
}

#shop_t header {
    background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.5)), to(rgba(0, 0, 0, 0.5))), url("../img/shop_block_two_l.png") no-repeat center top/cover;
    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../img/shop_block_two_l.png") no-repeat center top/cover;
    background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.5)), to(rgba(0, 0, 0, 0.5))), url("https://via.placeholder.com/1920x1080") no-repeat center/cover;
    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("https://via.placeholder.com/1920x1080") no-repeat center/cover;
}
/* ... */

